--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230422.3"></script>
-  <script src="lang.js?v=20230422.3"></script>
-  <script src="globals.js?v=20230422.3"></script>
-  <script src="userdata.js?v=20230422.3"></script>
-  <script src="task.js?v=20230422.3"></script>
-  <script src="subfunc.js?v=20230422.3"></script>
-  <script src="uifunc.js?v=20230422.3"></script>
-  <script src="spread.js?v=20230422.3"></script>
-  <script src="func.js?v=20230422.3"></script>
+  <script src="consts.js?v=20230422.4"></script>
+  <script src="lang.js?v=20230422.4"></script>
+  <script src="globals.js?v=20230422.4"></script>
+  <script src="userdata.js?v=20230422.4"></script>
+  <script src="task.js?v=20230422.4"></script>
+  <script src="subfunc.js?v=20230422.4"></script>
+  <script src="uifunc.js?v=20230422.4"></script>
+  <script src="spread.js?v=20230422.4"></script>
+  <script src="func.js?v=20230422.4"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230422.3">
+  <link rel="stylesheet" href="style.css?v=20230422.4">
 </head>
 
 <body>
@@ -44,15 +44,15 @@
 
   <div id="page_loggedin" style="display: none;">
     <div class="wrapper">
-      <div class="dateWrapper">
-        <input type="date" class="id_target_date" onchange="onDateChange(this)">
-      </div>
-      <button class="button" str="str_get_tasks" onclick="onGetTasks()"></button>
-      <button class="button" str="str_add_task" onclick="onAddNewTask()"></button>
-      <button class="button" str="str_edit_task" onclick="onShowSpread()"></button>
+      <button class="button" btnType="getTask" str="str_get_tasks" onclick="onGetTasks()"></button>
+      <button class="button" btnType="addTask" str="str_add_task" onclick="onAddNewTask()"></button>
+      <button class="button" btnType="editTask" str="str_edit_task" onclick="onShowSpread()"></button>
     </div>
 
-    <div class="guruguru"></div>
+    <div class="dateWrapper">
+      <input type="date" class="id_target_date" onchange="onDateChange(this)">
+    </div>
+
 
     <div id="wrapper" class="wrapper">
       <div id="itemcontainer" class="container">
@@ -96,16 +96,16 @@
     </template>
 
     <div id="taskbuttons_only5moreitems" style="display: none;">
-      <div class="guruguru"></div>
-      <div class="wrapper">
-        <div class="dateWrapper">
-          <input type="date" class="id_target_date" onchange="onDateChange(this)">
-        </div>
-        <button class="button" str="str_get_tasks" onclick="onGetTasks()"></button>
-        <button class="button" str="str_add_task" onclick="onAddNewTask()"></button>
-        <button class="button" str="str_edit_task" onclick="onShowSpread()"></button>
+
+      <div class="dateWrapper">
+        <input type="date" class="id_target_date" onchange="onDateChange(this)">
       </div>
 
+      <div class="wrapper">
+        <button class="button" btnType="getTask" str="str_get_tasks" onclick="onGetTasks()"></button>
+        <button class="button" btnType="addTask" str="str_add_task" onclick="onAddNewTask()"></button>
+        <button class="button" btnType="editTask" str="str_edit_task" onclick="onShowSpread()"></button>
+      </div>
     </div>
   </div>
 
@@ -172,7 +172,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230422.3 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230422.4 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
