--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230428.2"></script>
-  <script src="lang.js?v=20230428.2"></script>
-  <script src="globals.js?v=20230428.2"></script>
-  <script src="userdata.js?v=20230428.2"></script>
-  <script src="task.js?v=20230428.2"></script>
-  <script src="subfunc.js?v=20230428.2"></script>
-  <script src="uifunc.js?v=20230428.2"></script>
-  <script src="spread.js?v=20230428.2"></script>
-  <script src="func.js?v=20230428.2"></script>
+  <script src="consts.js?v=20230429"></script>
+  <script src="lang.js?v=20230429"></script>
+  <script src="globals.js?v=20230429"></script>
+  <script src="userdata.js?v=20230429"></script>
+  <script src="task.js?v=20230429"></script>
+  <script src="subfunc.js?v=20230429"></script>
+  <script src="uifunc.js?v=20230429"></script>
+  <script src="spread.js?v=20230429"></script>
+  <script src="func.js?v=20230429"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230428.2">
+  <link rel="stylesheet" href="style.css?v=20230429">
 </head>
 
 <body>
@@ -73,11 +73,11 @@
             <input class="itemeditinputname" type="text" />
           </div>
           <div>
-            <!-- <input class="itemeditinputaction" type="text" /> -->
             <textarea class="itemeditinputaction"></textarea>
           </div>
           <div>
             <button class="editbutton" onclick="onEditItem(this)">変更</button>
+            <button class="deletebutton ml-auto" onclick="onDeleteItem(this)">削除</button>
           </div>
         </div>
       </div>
@@ -172,7 +172,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230428.2 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230429 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
