--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>EverydayTask</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/wenk/dist/wenk.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230429"></script>
-  <script src="lang.js?v=20230429"></script>
-  <script src="globals.js?v=20230429"></script>
-  <script src="userdata.js?v=20230429"></script>
-  <script src="task.js?v=20230429"></script>
-  <script src="subfunc.js?v=20230429"></script>
-  <script src="uifunc.js?v=20230429"></script>
-  <script src="spread.js?v=20230429"></script>
-  <script src="func.js?v=20230429"></script>
+  <script src="consts.js?v=20230430"></script>
+  <script src="lang.js?v=20230430"></script>
+  <script src="globals.js?v=20230430"></script>
+  <script src="userdata.js?v=20230430"></script>
+  <script src="task.js?v=20230430"></script>
+  <script src="subfunc.js?v=20230430"></script>
+  <script src="uifunc.js?v=20230430"></script>
+  <script src="spread.js?v=20230430"></script>
+  <script src="func.js?v=20230430"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230429">
+  <link rel="stylesheet" href="style.css?v=20230430">
 </head>
 
 <body>
@@ -62,8 +63,10 @@
       <div class="itemwrapper">
         <div class="item">
           <div class="itemtext">
-            <p class="text"></p>
-            <p class="timetext">0:00 - 24:00</p>
+            <span class="tooltip" data-wenk="">
+              <p class="text"></p>
+              <p class="timetext">0:00 - 24:00</p>
+            </span>
           </div>
           <button class=" taskbutton" onclick="onTaskAction(this)"></button>
           <button class="taskeditbutton" onclick="onShowEdit(this)">✎</button>
@@ -172,7 +175,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230429 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230430 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
