--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230430"></script>
-  <script src="lang.js?v=20230430"></script>
-  <script src="globals.js?v=20230430"></script>
-  <script src="userdata.js?v=20230430"></script>
-  <script src="task.js?v=20230430"></script>
-  <script src="subfunc.js?v=20230430"></script>
-  <script src="uifunc.js?v=20230430"></script>
-  <script src="spread.js?v=20230430"></script>
-  <script src="func.js?v=20230430"></script>
+  <script src="consts.js?v=20230430.2"></script>
+  <script src="lang.js?v=20230430.2"></script>
+  <script src="globals.js?v=20230430.2"></script>
+  <script src="userdata.js?v=20230430.2"></script>
+  <script src="task.js?v=20230430.2"></script>
+  <script src="subfunc.js?v=20230430.2"></script>
+  <script src="uifunc.js?v=20230430.2"></script>
+  <script src="spread.js?v=20230430.2"></script>
+  <script src="func.js?v=20230430.2"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230430">
+  <link rel="stylesheet" href="style.css?v=20230430.2">
 </head>
 
 <body>
@@ -61,26 +61,27 @@
     </div>
     <template id="taskTemplate">
       <div class="itemwrapper">
-        <div class="item">
-          <div class="itemtext">
-            <span class="tooltip" data-wenk="">
+        <div class="tooltip" data-wenk="" class="wenk-length--fit">
+          <div class="item">
+            <div class="itemtext">
               <p class="text"></p>
               <p class="timetext">0:00 - 24:00</p>
-            </span>
+            </div>
+
+            <button class=" taskbutton" onclick="onTaskAction(this)"></button>
+            <button class="taskeditbutton" onclick="onShowEdit(this)">✎</button>
           </div>
-          <button class=" taskbutton" onclick="onTaskAction(this)"></button>
-          <button class="taskeditbutton" onclick="onShowEdit(this)">✎</button>
-        </div>
-        <div class="itemedit" style="display: none;">
-          <div>
-            <input class="itemeditinputname" type="text" />
-          </div>
-          <div>
-            <textarea class="itemeditinputaction"></textarea>
-          </div>
-          <div>
-            <button class="editbutton" onclick="onEditItem(this)">変更</button>
-            <button class="deletebutton ml-auto" onclick="onDeleteItem(this)">削除</button>
+          <div class="itemedit" style="display: none;">
+            <div>
+              <input class="itemeditinputname" type="text" />
+            </div>
+            <div>
+              <textarea class="itemeditinputaction"></textarea>
+            </div>
+            <div>
+              <button class="editbutton" onclick="onEditItem(this)">変更</button>
+              <button class="deletebutton ml-auto" onclick="onDeleteItem(this)">削除</button>
+            </div>
           </div>
         </div>
       </div>
@@ -175,7 +176,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230430 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230430.2 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
