--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230430.2"></script>
-  <script src="lang.js?v=20230430.2"></script>
-  <script src="globals.js?v=20230430.2"></script>
-  <script src="userdata.js?v=20230430.2"></script>
-  <script src="task.js?v=20230430.2"></script>
-  <script src="subfunc.js?v=20230430.2"></script>
-  <script src="uifunc.js?v=20230430.2"></script>
-  <script src="spread.js?v=20230430.2"></script>
-  <script src="func.js?v=20230430.2"></script>
+  <script src="consts.js?v=20230430.3"></script>
+  <script src="lang.js?v=20230430.3"></script>
+  <script src="globals.js?v=20230430.3"></script>
+  <script src="userdata.js?v=20230430.3"></script>
+  <script src="task.js?v=20230430.3"></script>
+  <script src="subfunc.js?v=20230430.3"></script>
+  <script src="uifunc.js?v=20230430.3"></script>
+  <script src="spread.js?v=20230430.3"></script>
+  <script src="func.js?v=20230430.3"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230430.2">
+  <link rel="stylesheet" href="style.css?v=20230430.3">
 </head>
 
 <body>
@@ -127,6 +127,7 @@
       <button id="howto" str="str_how_to_use" class="button" onclick='toggleFooter(this)'></button>
       <button id="privacy" str="str_privacy" class="button" onclick='toggleFooter(this)'></button>
       <button id="contact" str="str_contact" class="button" onclick='toggleFooter(this)'></button>
+      <button id="settings" str="str_settings" class="button" onclick='toggleFooter(this)'></button>
 
       <template id="howtoTemplate">
         <div class="howtoHtml">
@@ -170,13 +171,20 @@
           <p>お問い合わせをここに書く</p>
         </div>
       </template>
+
+      <template id="settingsTemplate">
+        <div class="settingsHtml">
+          <h2>設定</h2>
+          <input id="settings_showmemo" type="checkbox" onchange="onSettingsChange(this)">メモをツールチップで表示
+        </div>
+      </template>
     </div>
 
     <div class="wrapper">
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230430.2 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230430.3 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
