--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230430.3"></script>
-  <script src="lang.js?v=20230430.3"></script>
-  <script src="globals.js?v=20230430.3"></script>
-  <script src="userdata.js?v=20230430.3"></script>
-  <script src="task.js?v=20230430.3"></script>
-  <script src="subfunc.js?v=20230430.3"></script>
-  <script src="uifunc.js?v=20230430.3"></script>
-  <script src="spread.js?v=20230430.3"></script>
-  <script src="func.js?v=20230430.3"></script>
+  <script src="consts.js?v=20230501"></script>
+  <script src="lang.js?v=20230501"></script>
+  <script src="globals.js?v=20230501"></script>
+  <script src="userdata.js?v=20230501"></script>
+  <script src="task.js?v=20230501"></script>
+  <script src="subfunc.js?v=20230501"></script>
+  <script src="uifunc.js?v=20230501"></script>
+  <script src="spread.js?v=20230501"></script>
+  <script src="func.js?v=20230501"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230430.3">
+  <link rel="stylesheet" href="style.css?v=20230501">
 </head>
 
 <body>
@@ -175,7 +175,13 @@
       <template id="settingsTemplate">
         <div class="settingsHtml">
           <h2>設定</h2>
-          <input id="settings_showmemo" type="checkbox" onchange="onSettingsChange(this)">メモをツールチップで表示
+          <ul>
+            <li><input id="settings_showmemo" type="checkbox" onchange="onSettingsChange_ShowMemo(this)">メモをツールチップで表示
+            </li>
+            <li><input id="settings_autologin" type="checkbox"
+                onchange="onSettingsChange_AutoLogin(this)">自動でログインする（ポップアップの許可が必要になる場合があります）
+            </li>
+          </ul>
         </div>
       </template>
     </div>
@@ -184,7 +190,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230430.3 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230501 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
