--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230517"></script>
-  <script src="lang.js?v=20230517"></script>
-  <script src="globals.js?v=20230517"></script>
-  <script src="userdata.js?v=20230517"></script>
-  <script src="task.js?v=20230517"></script>
-  <script src="subfunc.js?v=20230517"></script>
-  <script src="uifunc.js?v=20230517"></script>
-  <script src="spread.js?v=20230517"></script>
-  <script src="func.js?v=20230517"></script>
+  <script src="consts.js?v=20230521"></script>
+  <script src="lang.js?v=20230521"></script>
+  <script src="globals.js?v=20230521"></script>
+  <script src="userdata.js?v=20230521"></script>
+  <script src="task.js?v=20230521"></script>
+  <script src="subfunc.js?v=20230521"></script>
+  <script src="uifunc.js?v=20230521"></script>
+  <script src="spread.js?v=20230521"></script>
+  <script src="func.js?v=20230521"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230517">
+  <link rel="stylesheet" href="style.css?v=20230521">
 </head>
 
 <body>
@@ -73,7 +73,7 @@
           </div>
           <div class="itemedit" style="display: none;">
             <div>
-              <button class="deletecheckbutton" onclick="onDeleteLastCheck(this)">最後のチェックを削除</button>
+              <button class="deletecheckbutton" str="str_delete_last_check" onclick="onDeleteLastCheck(this)"></button>
             </div>
 
             <div>
@@ -83,8 +83,8 @@
               <textarea class="itemeditinputaction"></textarea>
             </div>
             <div>
-              <button class="editbutton" onclick="onEditItem(this)">変更</button>
-              <button class="deletebutton ml-auto" onclick="onDeleteItem(this)">削除</button>
+              <button class="editbutton" str="str_change" onclick="onEditItem(this)"></button>
+              <button class="deletebutton ml-auto" str="str_delete" onclick="onDeleteItem(this)"></button>
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230517 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230521 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
