--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230522"></script>
-  <script src="lang.js?v=20230522"></script>
-  <script src="globals.js?v=20230522"></script>
-  <script src="userdata.js?v=20230522"></script>
-  <script src="task.js?v=20230522"></script>
-  <script src="subfunc.js?v=20230522"></script>
-  <script src="uifunc.js?v=20230522"></script>
-  <script src="spread.js?v=20230522"></script>
-  <script src="func.js?v=20230522"></script>
+  <script src="consts.js?v=20230522.2"></script>
+  <script src="lang.js?v=20230522.2"></script>
+  <script src="globals.js?v=20230522.2"></script>
+  <script src="userdata.js?v=20230522.2"></script>
+  <script src="task.js?v=20230522.2"></script>
+  <script src="subfunc.js?v=20230522.2"></script>
+  <script src="uifunc.js?v=20230522.2"></script>
+  <script src="spread.js?v=20230522.2"></script>
+  <script src="func.js?v=20230522.2"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230522">
+  <link rel="stylesheet" href="style.css?v=20230522.2">
 </head>
 
 <body>
@@ -54,7 +54,6 @@
       <input type="date" class="id_target_date" onchange="onDateChange(this)">
     </div>
 
-
     <div id="wrapper" class="wrapper">
       <div id="itemcontainer" class="container">
       </div>
@@ -63,6 +62,7 @@
       <div class="itemwrapper">
         <div class="tooltip" data-wenk="" class="wenk-length--fit">
           <div class="item">
+            <img class="img_favicon" />
             <div class="itemtext">
               <p class="text"></p>
               <p class="timetext">0:00 - 24:00</p>
@@ -162,7 +162,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230522 &copy; 2023 ambiesoft.com</p>
+      <p id="productinfo">EverydayTask v20230522.2 &copy; 2023 ambiesoft.com</p>
     </div>
   </footer>
 
