Added buttons to scroll to top and bottom

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230615"></script>
-  <script src="lang.js?v=20230615"></script>
-  <script src="globals.js?v=20230615"></script>
-  <script src="userdata.js?v=20230615"></script>
-  <script src="task.js?v=20230615"></script>
-  <script src="subfunc.js?v=20230615"></script>
-  <script src="uifunc.js?v=20230615"></script>
-  <script src="spread.js?v=20230615"></script>
-  <script src="func.js?v=20230615"></script>
+  <script src="consts.js?v=20230615.2"></script>
+  <script src="lang.js?v=20230615.2"></script>
+  <script src="globals.js?v=20230615.2"></script>
+  <script src="userdata.js?v=20230615.2"></script>
+  <script src="task.js?v=20230615.2"></script>
+  <script src="subfunc.js?v=20230615.2"></script>
+  <script src="uifunc.js?v=20230615.2"></script>
+  <script src="spread.js?v=20230615.2"></script>
+  <script src="func.js?v=20230615.2"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230615">
+  <link rel="stylesheet" href="style.css?v=20230615.2">
 </head>
 
 <body>
@@ -48,6 +48,7 @@
       <button class="button" btnType="getTask" str="str_get_tasks" onclick="onGetTasks()"></button>
       <button class="button" btnType="addTask" str="str_add_task" onclick="onAddNewTask()"></button>
       <button class="button" btnType="editTask" str="str_edit_task" onclick="onShowSpread()"></button>
+      <button class="button" onclick='onScrollToBottom()'>🔽</button>
     </div>
 
     <div class="dateWrapper">
@@ -113,6 +114,7 @@
         <button class="button" btnType="getTask" str="str_get_tasks" onclick="onGetTasks()"></button>
         <button class="button" btnType="addTask" str="str_add_task" onclick="onAddNewTask()"></button>
         <button class="button" btnType="editTask" str="str_edit_task" onclick="onShowSpread()"></button>
+        <button class="button" onclick='onScrollToTop()'>🔼</button>
       </div>
     </div>
   </div>
@@ -162,7 +164,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230615 &copy; 2023 <a href="https://www.ambiesoft.com/"
+      <p id="productinfo">EverydayTask v20230615.2 &copy; 2023 <a href="https://www.ambiesoft.com/"
           target="_blank">ambiesoft.com</a></p>
     </div>
   </footer>
