--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230726"></script>
-  <script src="lang.js?v=20230726"></script>
-  <script src="globals.js?v=20230726"></script>
-  <script src="userdata.js?v=20230726"></script>
-  <script src="task.js?v=20230726"></script>
-  <script src="subfunc.js?v=20230726"></script>
-  <script src="uifunc.js?v=20230726"></script>
-  <script src="spread.js?v=20230726"></script>
-  <script src="func.js?v=20230726"></script>
+  <script src="consts.js?v=20230802"></script>
+  <script src="lang.js?v=20230802"></script>
+  <script src="globals.js?v=20230802"></script>
+  <script src="userdata.js?v=20230802"></script>
+  <script src="task.js?v=20230802"></script>
+  <script src="subfunc.js?v=20230802"></script>
+  <script src="uifunc.js?v=20230802"></script>
+  <script src="spread.js?v=20230802"></script>
+  <script src="func.js?v=20230802"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230726">
+  <link rel="stylesheet" href="style.css?v=20230802">
 </head>
 
 <body>
@@ -164,7 +164,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230726 &copy; 2023 <a href="https://www.ambiesoft.com/"
+      <p id="productinfo">EverydayTask v20230802 &copy; 2023 <a href="https://www.ambiesoft.com/"
           target="_blank">ambiesoft.com</a></p>
     </div>
   </footer>
