Added the github link

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,8 @@
     </div>
     <div class="wrapper">
       <p id="productinfo">EverydayTask v20230802 &copy; 2023 <a href="https://www.ambiesoft.com/"
-          target="_blank">ambiesoft.com</a></p>
+          target="_blank">ambiesoft.com</a> <a href="https://github.com/ambiesoft/everydaytask"
+          target="_blank">github</a></p>
     </div>
   </footer>
 
