--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230802"></script>
-  <script src="lang.js?v=20230802"></script>
-  <script src="globals.js?v=20230802"></script>
-  <script src="userdata.js?v=20230802"></script>
-  <script src="task.js?v=20230802"></script>
-  <script src="subfunc.js?v=20230802"></script>
-  <script src="uifunc.js?v=20230802"></script>
-  <script src="spread.js?v=20230802"></script>
-  <script src="func.js?v=20230802"></script>
+  <script src="consts.js?v=20230804"></script>
+  <script src="lang.js?v=20230804"></script>
+  <script src="globals.js?v=20230804"></script>
+  <script src="userdata.js?v=20230804"></script>
+  <script src="task.js?v=20230804"></script>
+  <script src="subfunc.js?v=20230804"></script>
+  <script src="uifunc.js?v=20230804"></script>
+  <script src="spread.js?v=20230804"></script>
+  <script src="func.js?v=20230804"></script>
 
-  <link rel="stylesheet" href="style.css?v=20230802">
+  <link rel="stylesheet" href="style.css?v=20230804">
 </head>
 
 <body>
@@ -74,8 +74,12 @@
           </div>
           <div class="itemedit" style="display: none;">
             <div>
+              <button class="showitemhistorybutton" str="str_show_item_history"
+                onclick="onShowItemHistory(this)"></button>
               <button class="deletecheckbutton" str="str_delete_last_check" onclick="onDeleteLastCheck(this)"></button>
             </div>
+
+            <div class="historydiv"></div>
 
             <div>
               <input class="itemeditinputname" type="text" />
@@ -164,7 +168,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20230802 &copy; 2023 <a href="https://www.ambiesoft.com/"
+      <p id="productinfo">EverydayTask v20230804 &copy; 2023 <a href="https://www.ambiesoft.com/"
           target="_blank">ambiesoft.com</a> <a href="https://github.com/ambiesoft/everydaytask"
           target="_blank">github</a></p>
     </div>
