--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="author" content="Ambiesoft" />
+  <meta name="description" content="An app for managing everydasy task" />
   <title>EverydayTask</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/wenk/dist/wenk.css">
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
