Before implement remote api call

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,9 @@
               <button class="editbutton" str="str_change" onclick="onEditItem(this)"></button>
               <button class="deletebutton ml-auto" str="str_delete" onclick="onDeleteItem(this)"></button>
             </div>
+            <div>
+              <button class="addafterthisbutton" str="str_add_task_afterthis" onclick="onAddNewTask(this.dataset.id)"></button>
+            </div>
           </div>
         </div>
       </div>
