Place 'addtaskafterthis' button on center
And set busy cursor while processing 'AddTaskAfterThis'

--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="basefunc.js?v=20240704"></script>
-  <script src="consts.js?v=20240704"></script>
-  <script src="lang.js?v=20240704"></script>
-  <script src="globals.js?v=20240704"></script>
-  <script src="userdata.js?v=20240704"></script>
-  <script src="task.js?v=20240704"></script>
-  <script src="subfunc.js?v=20240704"></script>
-  <script src="uifunc.js?v=20240704"></script>
-  <script src="spread.js?v=20240704"></script>
-  <script src="func.js?v=20240704"></script>
+  <script src="basefunc.js?v=20240705"></script>
+  <script src="consts.js?v=20240705"></script>
+  <script src="lang.js?v=20240705"></script>
+  <script src="globals.js?v=20240705"></script>
+  <script src="userdata.js?v=20240705"></script>
+  <script src="task.js?v=20240705"></script>
+  <script src="subfunc.js?v=20240705"></script>
+  <script src="uifunc.js?v=20240705"></script>
+  <script src="spread.js?v=20240705"></script>
+  <script src="func.js?v=20240705"></script>
 
-  <link rel="stylesheet" href="style.css?v=20240704">
+  <link rel="stylesheet" href="style.css?v=20240705">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
               <button class="editbutton" str="str_change" onclick="onEditItem(this)"></button>
               <button class="deletebutton ml-auto" str="str_delete" onclick="onDeleteItem(this)"></button>
             </div>
-            <div>
+            <div class="addafterthisdiv">
               <button class="addafterthisbutton" str="str_add_task_afterthis"
                 onclick="onAddNewTask(this.dataset.id)"></button>
             </div>
@@ -174,7 +174,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20240704 &copy; 2023 <a href="https://www.ambiesoft.com/"
+      <p id="productinfo">EverydayTask v20240705 &copy; 2023 <a href="https://www.ambiesoft.com/"
           target="_blank">ambiesoft.com</a> <a href="https://github.com/ambiesoft/everydaytask"
           target="_blank">github</a></p>
     </div>
