Internationalize header list menu and related messages, unify comments to English

--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="basefunc.js?v=20250415"></script>
-  <script src="consts.js?v=20250415"></script>
-  <script src="lang.js?v=20250415"></script>
-  <script src="globals.js?v=20250415"></script>
-  <script src="userdata.js?v=20250415"></script>
-  <script src="task.js?v=20250415"></script>
-  <script src="subfunc.js?v=20250415"></script>
-  <script src="uifunc.js?v=20250415"></script>
-  <script src="spread.js?v=20250415"></script>
-  <script src="func.js?v=20250415"></script>
+  <script src="basefunc.js?v=20250727"></script>
+  <script src="consts.js?v=20250727"></script>
+  <script src="lang.js?v=20250727"></script>
+  <script src="globals.js?v=20250727"></script>
+  <script src="userdata.js?v=20250727"></script>
+  <script src="task.js?v=20250727"></script>
+  <script src="subfunc.js?v=20250727"></script>
+  <script src="uifunc.js?v=20250727"></script>
+  <script src="spread.js?v=20250727"></script>
+  <script src="func.js?v=20250727"></script>
 
-  <link rel="stylesheet" href="style.css?v=20250415">
+  <link rel="stylesheet" href="style.css?v=20250727">
 </head>
 
 <body>
@@ -50,6 +50,12 @@
       <button class="button" btnType="getTask" str="str_get_tasks" onclick="onGetTasks()"></button>
       <button class="button" btnType="addTask" str="str_add_task" onclick="onAddNewTask()"></button>
       <button class="button" btnType="editTask" str="str_edit_task" onclick="onShowSpread()"></button>
+
+      <button id="showHeaderMenuBtn" class="button" style="margin-left:8px;" type="button"
+        str="str_headers_list"></button>
+      <div id="headerMenuPopup"
+        style="display:none;position:absolute;z-index:1001;background:#fff;border:1px solid #ccc;padding:8px;box-shadow:0 2px 8px #aaa;">
+      </div>
       <button class="button" onclick='onScrollToBottom()' str="str_goto_bottom"></button>
     </div>
 
@@ -174,7 +180,7 @@
       <div id="otherinfo"></div>
     </div>
     <div class="wrapper">
-      <p id="productinfo">EverydayTask v20250415 &copy; 2023 <a href="https://www.ambiesoft.com/"
+      <p id="productinfo">EverydayTask v20250727 &copy; 2023 <a href="https://www.ambiesoft.com/"
           target="_blank">ambiesoft.com</a> <a href="https://github.com/ambiesoft/everydaytask"
           target="_blank">github</a></p>
     </div>
